<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/history_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/clear_history_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:clickable="true"
        app:borderWidth="0dp"
        app:fabSize="auto"
        app:srcCompat="@drawable/ic_clear_history"
        tools:ignore="UnusedAttribute"/>

</FrameLayout>