<resources>
    <string name="app_name">Translator</string>
    <string name="title_translate">Translate</string>
    <string name="title_favorite">Favorites</string>
    <string name="title_settings">Settings</string>
    <string name="input_text">Input Text</string>
    <string name="connection_problem">There is a connection problem</string>

    <string-array name="translation_languages">
        <item>English</item>
        <item>Russian</item>
        <item>French</item>
        <item>German</item>
    </string-array>
    <string name="history">History</string>
    <string name="detect_language">Detect Language</string>
    <string name="clear_history_confirmation">Clear translation history?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="change_language_button_description">change language</string>
    <string name="remove_text_from_text_field_button_description">Remove text from text field</string>
    <string name="add_to_favorites_button_description">Add to favorites button</string>
    <string name="translated_with_yandex_translator_text">Powered by Yandex.Translate</string>
</resources>
